--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
            <section>
             <div class="div ">
                 <span class="price_span" id="green">
-                    $ 5 
-                    <br>per month
+                    
+                <h1>$ 5</h1>
+                <h1>per month</h1>
+           
                 </span>
                 <span class="price_span">
                     <ul>
