--- a/index.html
+++ b/index.html
@@ -1,50 +1,54 @@
 <html>
-    <head>
-        <meta charaset="utf-8">
-        <meta name="viewport" content="width=devise-width,initial-scale=1, maximum-scale=1, user-scale=no">
-        <link type="text/css" rel="stylesheet" href="css/style.css"> 
-    </head>
-    <body>
-        <header>
-            <div>
-                <h1>Simple Pricing.</h1>
-                <h1>Try before you buy.</h1>
-           </div>
-        </header>
-        <main>
-           <section>
-            <div class="div ">
-                <span class="price_span" id="green">
-                    
-                <h1>$ 5</h1>
-                <h1>per month</h1>
-           
-                </span>
-                <span class="price_span">
-                    <ul>
-                        <li>Free Setup</li>
-                        <br>
-                        <hr>
-                        <li>Cusom sub-domain</li>
-                        <br>
-                        <hr>
-                        <li>Standard customer support</li>
-                        <br>
-                        <hr>
-                        <li>1 GB file storage</li>
-                        <br>
-                        <hr>
-                        <li>1 database</li>
-                        <br>
-                        <hr>
-                        <li>Unlimited bandwidth</li>
-                        <hr>
-                    </ul>
-                </span>
-                <span>
-                    <buton><a href="#">Choose</a></buton>
-                </span>
-            </div>
+ <head>
+    <meta charaset="utf-8">
+    <meta name="viewport" content="width=devise-width,initial-scale=1, maximum-scale=1, user-scale=no">
+    <link type="text/css" rel="stylesheet" href="css/style.css"> 
+</head>
+ <body>
+     <header>
+         <div>
+             <h1>Simple Pricing.</h1>
+             <h1>Try before you buy.
+             </h1>
+         </div>
+    </header>
+    <main>
+     <section>
+        <div class="div ">
+             <span class="price_span" id="green">
+                <h1>$ 5
+                </h1>
+                <h1>per month
+                </h1>
+            </span>
+            <span class="price_span">
+             <ul>
+              <li>Free Setup
+              </li>
+              <br>
+              <li>Cusom sub-domain
+              </li>
+              <br>
+              <li>Standard customer support
+              </li>
+              <br>
+              <li>1 GB file storage
+              </li>
+              <br>
+              <li>1 database
+              </li>
+              <br>
+              <li>Unlimited bandwidth
+              </li>
+            </ul>
+        </span>
+        <span>
+            <buton>
+               <a href="#">Choose
+               </a>
+            </buton>
+        </span>
+    </div>
             <div>
                   <span class="price_span" id="blue">
                     $ 25 per month
